--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0"
   },
   "name": "moija-server",
   "version": "0.0.1",
