--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,12 @@
   "description": "moija-server",
   "main": "app.js",
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   },
   "scripts": {
     "start": "nodemon app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "JC",
   "license": "ISC"
