--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,12 @@
   "main": "app.js",
   "devDependencies": {
     "jest": "^26.6.3",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "scripts": {
     "start": "nodemon app",
-    "test": "jest"
+    "test": "NODE_ENV=test PORT=8001 jest --forceExit"
   },
   "author": "JC",
   "license": "ISC"
