--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   },
