--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   },
